--- a/app/views/tmpl/addLibraryProperties.html
+++ b/app/views/tmpl/addLibraryProperties.html
@@ -26,39 +26,30 @@
                       <!-- col -->
                       <div class="col-md-12">
 
-                        <!-- tile -->
-                        <section class="tile" fullscreen="isFullscreen02" >
-                          <!-- tile body -->
-                          <div class="tile-body p-0">
+
+<section class="tile" fullscreen="isFullscreen04">
+   <!-- tile header --> 
+   <div class="tile-header dvd dvd-btm">
+      <h1 class="custom-font"><strong>New Library URL in SVN</strong></h1>
+     
+   </div>
+   <!-- /tile header --> <!-- tile body --> 
+  
+
+<div class="tile-body">
+  <form name="form" class="form-validation mt-20" novalidate ng-submit="submit()" >
+      <div class="form-group"> <label >Library URL Key</label> <input type="text" class="form-control underline-input" name="urlKey" placeholder="Library URL Key" ng-model="urlkey" required></div>
+      <div class="form-group"> <label >	Library URL value</label> <input type="text" placeholder="Library URL Value"  name="urlvalue" class="form-control underline-input" ng-model="urlvalue" required> </div>
+       <br>
+	  <div class="form-group"><button type="submit" class="btn btn-blue b-0 br-3  mr-6"  ng-disabled='form.$invalid'>Save To Properties</button></div>
+   </form>
+   <br>
+</div>
+
+</section>
 
 
-                               <div class="tile-header dvd dvd-btm">
-                            <h1 class="custom-font"><strong>New Library URL in SVN</strong></h1>
-
-                        </div>
-                                <form name="form" class="form-validation mt-20" novalidate ng-submit="submit()" >
-
-								  <div class="form-group">
-									<label for="urlKey">Library URL Key</label>
-									<label for="urlKey">Library URL value</label>
-								  </div>
-
-								  <div class="form-group">
-									<input type="text" class="form-control underline-input" name="urlKey" placeholder="Library URL Key" ng-model="urlkey" required>
-									<input type="text" placeholder="Library URL Value"  name="urlvalue" class="form-control underline-input" ng-model="urlvalue" required>
-								  </div>
-
-								  <div class="form-group text-left mt-20">
-									<button type="submit" class="btn btn-blue b-0 br-3  mr-6"  ng-disabled='form.$invalid'>Save To Properties</button>
-								  </div>
-
-								</form>
-
-
-                          </div>
-                          <!-- /tile body -->
-
-                        </section>
+                       
                         <!-- /tile -->
 
                       </div>
