--- a/app/views/tmpl/interfacelist.html
+++ b/app/views/tmpl/interfacelist.html
@@ -78,10 +78,10 @@
                                       <td><center>DEV</center></td>
                                       <td>Arjun Kanniah</td>
                                     </tr> -->
-									<tr ng-repeat="x in interfaces">
+									<tr ng-repeat="x in interfaces | orderBy: '-time'">
 									  <td  ng-click="viewflow(x.interface_name)"><font color="#616f77"><span class="tab">{{x.interface_name}}</span></font></td>
-                                      <td>10 April 2017 </td>
-                                      <td> 04:46 PM </td>
+                                      <td>{{x.date}} </td>
+                                      <td>{{x.time}} </td>
                                       <td><center><i class="fa fa-square text-success"></i></center></td>
                                       <td><center>DEV</center></td>
                                       <td>Arjun Kanniah</td>
