--- a/app/views/tmpl/viewlibrary.html
+++ b/app/views/tmpl/viewlibrary.html
@@ -3,7 +3,7 @@
 
                     <div class="pageheader">
 
-                        <h2>View Interface <span></span></h2>
+                        <h2>View Library <span></span></h2>
 
                         <div class="page-bar">
 
@@ -12,11 +12,13 @@
                                     <a href="index.html"><i class="fa fa-home"></i> mDash</a>
                                 </li>
                                 <li>
-                                    <a ng-model="interfaceName" id="interfaceName" href="">{{interfaceName}}</a>
+                                    <a href="#">Library</a>
+                                </li>
+                                <li>
+                                    <a href="">Library Name</a>
                                 </li>
                             </ul>
-							<!-- ui-sref="app.editinterface" -->
-                            <div class="page-toolbar ng-scope"> <a href="javascript:;" class="btn btn-lightred no-border ng-isolate-scope" ng-click="edit()" > <i class="fa fa-edit"></i>&nbsp;&nbsp;<span class="ng-binding">Edit</span> </a> </div>
+                            <div class="page-toolbar ng-scope"> <a ui-sref="app.addinterface" href="javascript:;" class="btn btn-lightred no-border ng-isolate-scope" > <i class="fa fa-edit"></i>&nbsp;&nbsp;<span class="ng-binding">Edit</span> </a> </div>
                         </div>
 
                     </div>
@@ -29,9 +31,9 @@
                       <div class="col-md-6">
 
                         <!-- tile -->
-                        <section class="tile" fullscreen="isFullscreen02">
+                        <section class="tile" fullscreen="isFullscreen02" ng-controller="BrowseUsageCtrl">
                           <div class="tile-header dvd dvd-btm">
-                          <h1 class="custom-font">Flows</h1>
+                          <h1 class="custom-font"><strong>Flows</strong></h1>
 
                           </div>
                           <!-- tile body -->
@@ -49,7 +51,7 @@
                                       <th> <center>Environment </center></th>
 
                                     </tr>
-                                    <!-- <tr  >
+                                    <tr  >
                                       <td ><a  ui-sref="app.projectbuild"><font color="#616f77"><span class="tab">CLA_CLIENTMISC_ORM</span></font></a></td>
                                       <td> 3 April 2017  </td>
                                       <td> 08:04 PM </td>
@@ -110,13 +112,6 @@
                                       <td><center><i class="fa fa-square text-danger"></i><center></td>
                                       <td><center>PROD</center></td>
 
-                                    </tr> -->
-									<tr ng-repeat="x in flows">
-									  <td  ng-click="flow(x.flowname)"><font color="#616f77"><span class="tab">{{x.flowname}}</span></font></td>
-                                       <td> 7 April 2017 </td>
-                                      <td> 06:14 PM</td>
-                                      <td><center><i class="fa fa-square text-danger"></i><center></td>
-                                      <td><center>PROD</center></td>
                                     </tr>
 
 
@@ -155,23 +150,24 @@
                                 <!-- row -->
                                 <div class="row bg-slategray">
                                   <!-- col -->
+								  <div class="col-lg-4 text-center">
+                                    <div easypiechart options="easypiechart2.options" percent="easypiechart2.percent" class="easypiechart" style="width: 140px; height: 140px;">
+                                      <p class="text-uppercase text-elg mt-20 mb-0" style="line-height: 100px;"><strong class="text-white">3/4</strong></p><br>
+                                      <p class="text-uppercase text-elg mt-20 mb-0"><strong class="text-white">Dev</strong> </p>
+                                      <p class="text-light">v4.1 - April 18th,2017</p>
+                                    </div>
+                                  </div>
                                   <div class="col-lg-4 text-center">
                                     <div easypiechart options="easypiechart.options" percent="easypiechart.percent" class="easypiechart" style="width: 140px; height: 140px;">
                                       <p class="text-uppercase text-elg mt-20 mb-0" style="line-height: 100px;"><strong class="text-white">4/4</strong></p>
                                       <br>
-                                    <p class="text-uppercase text-elg mt-20 mb-0"><strong class="text-white">Dev</strong> </p>
+                                    <p class="text-uppercase text-elg mt-20 mb-0"><strong class="text-white">Test</strong> </p>
                                     <p class="text-light">v3.2 - April 11th,2017</p>
                                   </div>
                                 </div>
                                   <!-- /col-->
                                   <!-- col -->
-                                  <div class="col-lg-4 text-center">
-                                    <div easypiechart options="easypiechart2.options" percent="easypiechart2.percent" class="easypiechart" style="width: 140px; height: 140px;">
-                                      <p class="text-uppercase text-elg mt-20 mb-0" style="line-height: 100px;"><strong class="text-white">3/4</strong></p><br>
-                                      <p class="text-uppercase text-elg mt-20 mb-0"><strong class="text-white">Test</strong> </p>
-                                      <p class="text-light">v4.1 - April 18th,2017</p>
-                                    </div>
-                                  </div>
+                                  
                                   <!-- /col -->
                                   <!-- col -->
                                   <div class="col-lg-4  text-center">
@@ -208,7 +204,7 @@
                           <div class="tile-body p-0">
 
                            <div class="tile-header dvd dvd-btm">
-                            <h1 class="custom-font">Recent Builds</h1>
+                            <h1 class="custom-font"><strong>Recent</strong> Builds</h1>
 
                         </div>
 
@@ -265,7 +261,7 @@
                           <div class="tile-body p-0">
 
                             <div class="tile-header dvd dvd-btm">
-                            <h1 class="custom-font">Invoke Test</h1>
+                            <h1 class="custom-font"><strong>Invoke</strong> Test</h1>
 
                         </div>
                              <div class="tile-body ng-scope">
