--- a/app/views/tmpl/dashboard.html
+++ b/app/views/tmpl/dashboard.html
@@ -9,7 +9,6 @@ text-decoration:none !important;
 
 
 </style>
-
 <div class="page page-dashboard">
 
   <div class="pageheader">
@@ -171,19 +170,19 @@ text-decoration:none !important;
 
 <script>
 
-	function main1(){
+	function main1(){ document.getElementById('information').innerHTML="DEV&nbsp;<i class='fa fa-angle-down'></i>";
 document.getElementById("main1").style.backgroundColor="#f5f5f5";
 document.getElementById("main3").style.backgroundColor="transparent";
 document.getElementById("main2").style.backgroundColor="transparent";
 }
 
-	function main2(){
+	function main2(){document.getElementById('information').innerHTML="TEST&nbsp;<i class='fa fa-angle-down'></i>";
 document.getElementById("main2").style.backgroundColor="#f5f5f5";
 document.getElementById("main1").style.backgroundColor="transparent";
 document.getElementById("main3").style.backgroundColor="transparent";
 }
 
-	function main3(){
+	function main3(){ document.getElementById('information').innerHTML="PROD&nbsp;<i class='fa fa-angle-down'></i>";
 document.getElementById("main3").style.backgroundColor="#f5f5f5";
 document.getElementById("main1").style.backgroundColor="transparent";
 document.getElementById("main2").style.backgroundColor="transparent";
@@ -208,22 +207,28 @@ document.getElementById("main2").style.backgroundColor="transparent";
           <ul class="controls">
 		   <li class="dropdown" uib-dropdown on-toggle="toggled(open)">
 
-              <a href uib-dropdown-toggle class="dropdown-toggle settings"> DEV <i class="fa fa-angle-down"></i></a>
+              <a href uib-dropdown-toggle class="dropdown-toggle settings" id="information" > DEV <i class="fa fa-angle-down"></i></a>
 
               <ul class="dropdown-menu pull-right with-arrow animated littleFadeInUp">
                 
+				
+				<li>
+                  <a id="main1"  href  ng-click="ajaxFaker()" onclick="main1()" style="background-color:#f5f5f5">
+                    DEV
+                  </a>
+                </li>
                 <li>
                   <a id="main2" href  ng-click="ajaxFaker()" onclick="main2()">
                     TEST
                   </a>
                 </li>
                 <li>
-                  <a id="main3" href  ng-click="ajaxFaker()" onclick="main3()">
+                  <a id="main3"href  ng-click="ajaxFaker()" onclick="main3()">
                     PROD
                   </a>
                 </li>
                
-
+          
               </ul>
 
             </li>
