--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -13,11 +13,11 @@ text-decoration:none !important;
         <li ui-sref-active="active"><a ui-sref="app.projects"><fa name="briefcase"></fa> Interfaces</a>
 		  <ul>
             <li ui-sref-active="active"><a ui-sref="app.addinterface"><fa name="caret-right"></fa>Create New</a></li>
-			<li ui-sref-active="active"><a ui-sref="app.editinterface"><fa name="caret-right"></fa>Edit Interface</a></li>
+			<!--<li ui-sref-active="active"><a ui-sref="app.editinterface"><fa name="caret-right"></fa>Edit Interface</a></li>-->
 			 <li ui-sref-active="active"><a ui-sref="app.interfacelist"><fa name="caret-right"></fa>Interface Listing</a></li>
-            <li ui-sref-active="active"><a ui-sref="app.viewinterface"><fa name="caret-right"></fa>View Interface</a></li>
+           <!-- <li ui-sref-active="active"><a ui-sref="app.viewinterface"><fa name="caret-right"></fa>View Interface</a></li>-->
            <!--  <li ui-sref-active="active"><a ui-sref="app.viewflow"><fa name="caret-right"></fa>View Flow</a></li> -->
-            <li ui-sref-active="active"><a ui-sref="app.viewjob"><fa name="caret-right"></fa>View Job</a></li>			
+            <!--<li ui-sref-active="active"><a ui-sref="app.viewjob"><fa name="caret-right"></fa>View Job</a></li>			-->
 			<!-- <li ui-sref-active="active"><a ui-sref="app.addLibraryProperties"><fa name="caret-right"></fa>Add Library property</a></li>
 			<li ui-sref-active="active"><a ui-sref="app.configurationsPage"><fa name="caret-right"></fa>configurationsPage</a></li> -->
           </ul>
